feat: adds delete item tag resource
